--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
     "next": "14.0.3",
     "react": "^18",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.4",
+    "@types/react": "18.2.48"
   }
 }
