--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "hamburger-react": "^2.5.0",
     "next": "14.0.3",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
