--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "hamburger-react": "^2.5.0",
@@ -16,9 +17,11 @@
     "react": "^18",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "sass": "^1.69.5",
     "swiper": "^11.0.6",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.11.4",
