--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,4 @@ RewriteRule (.*) public/$1 [L]
 
 Header add Access-Control-Allow-Origin "*"
 Header add Access-Control-Allow-Methods: "GET,POST,OPTIONS,DELETE,PUT"
+Header add Access-Control-Allow-Headers: "Origin, X-Requested-With, Content-Type, Accept"
