method naming switched to CammelCase

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,11 @@ DB_NAME='dbname'
 DB_CHARSET='utf8'
 
 #email setup
-EMAIL_HOST='example@mail.com'
+EMAIL_HOST='example@email.com'
+EMAIL_PORT='111'
 EMAIL_SECRET='yourSecretGoesHere'
+EMAIL_FROM='emailfrom@email.com'
+EMAIL_FROM_USR='From'
 
 #enviroment setup
 IS_DEV=boolean
