--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^11.0.20",
     "hamburger-react": "^2.5.0",
     "next": "14.0.3",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "recoil": "^0.7.7",
     "sass": "^1.69.5",
     "swiper": "^11.0.6",
     "typescript": "^5.3.3",
