--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "tuupola/slim-jwt-auth": "^3.8",
         "slim/psr7": "^1.6",
         "selective/basepath": "^2.2",
-        "zircote/swagger-php": "^4.8",
+        "zircote/swagger-php": "4.8.*",
         "phpmailer/phpmailer": "^6.9",
         "mobiledetect/mobiledetectlib": "^4.8",
         "ext-pdo": "*",
