--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "slim/slim": "^4.13",
         "vlucas/phpdotenv": "^5.6",
         "tuupola/slim-jwt-auth": "^3.8",
+        "tuupola/cors-middleware": "^1.4",
         "slim/psr7": "^1.6",
         "selective/basepath": "^2.2",
         "zircote/swagger-php": "4.8.*",
