--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.20",
     "hamburger-react": "^2.5.0",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
