--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,6 @@
     "require": {
         "slim/slim": "^4.13",
         "vlucas/phpdotenv": "^5.6",
-        "tuupola/slim-jwt-auth": "^3.8",
-        "tuupola/cors-middleware": "^1.4",
         "slim/psr7": "^1.6",
         "selective/basepath": "^2.2",
         "zircote/swagger-php": "4.8.*",
@@ -23,6 +21,7 @@
         "fakerphp/faker": "^1.23",
         "php-di/php-di": "^7.0",
         "doctrine/annotations": "^2.0",
-        "firebase/php-jwt": "^5.5"
+        "firebase/php-jwt": "^5.5",
+        "tuupola/cors-middleware": "^1.4"
     }
 }
