new env example

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
 #database parameters
-DB_HOST='dbhost'
-DB_USER='dbuser'
-DB_PASSWORD='dbpassword'
+DB_HOST='host'
+DB_USER='user'
+DB_PASSWORD='passwd'
 DB_NAME='dbname'
 DB_CHARSET='utf8'
 
 #email setup
-EMAIL_HOST='example@email.com'
-EMAIL_PORT='111'
-EMAIL_SECRET='yourSecretGoesHere'
-EMAIL_FROM='emailfrom@email.com'
-EMAIL_FROM_USR='From'
+EMAIL_USERNAME='username'
+EMAIL_PASSWORD='password'
+EMAIL_HOST='mail.server'
+EMAIL_PORT='000'
+EMAIL_FROM='example@gmail.com'
+EMAIL_FROM_USR='MainUser'
 
 #enviroment setup
-IS_DEV=boolean
-MAIN_URL='http://www.yourexampledomain.com/'
+IS_DEV=true
+MAIN_URL_BE='http://www.backend.com'
+MAIN_URL_FE='http://www.frontend.com'
+
+#config setup
+JWT_SECRET='jwtsecret'
