--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "hamburger-react": "^2.5.0",
     "jwt-decode": "^4.0.0",
     "next": "14.0.3",
+    "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
