--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6"
