rbac in progress

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,8 @@ EMAIL_FROM=your_email_from
 EMAIL_FROM_USR=your_email_from_user
 
 # Environment Setup
-IS_DEV=your_is_dev
+IS_DEV=bool
+IS_SECURE=bool
 MAIN_URL_BE=your_main_url_be
 MAIN_URL_FE=your_main_url_fe
 JWT_SECRET=your_jwt_secret
