--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ MAIN_URL_BE=your_main_url_be
 MAIN_URL_FE=your_main_url_fe
 JWT_SECRET=your_jwt_secret
 
-# Firebase Setup
+# Firebase & Storage Setup
 BUCKET_URL=your_bucket_url
 PROJECT_ID=your_project_id
+LOCAL_STORAGE_URL=path/to/your/project
