--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     },
     "require": {
+        "php": "8.2.*",
         "slim/slim": "^4.13",
         "slim/psr7": "^1.6",
         "selective/basepath": "^2.2",
