--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,13 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "": "./src/"
+            "Controllers\\": "./src/Controllers",
+            "Interfaces\\": "./src/Interfaces",
+            "Models\\": "./src/Models",
+            "Providers\\": "./src/Providers",
+            "Repositories\\": "./src/Repositories",
+            "Services\\": "./src/Services",
+            "Utilities\\": "./src/Utilities"
         }
     },
     "require": {
@@ -16,21 +22,17 @@
         "php-di/php-di": "^7.0",
         "tuupola/cors-middleware": "^1.4",
         "vlucas/phpdotenv": "^5.6",
-
         "zircote/swagger-php": "4.10.*",
         "doctrine/annotations": "^2.0",
         "firebase/php-jwt": "6.*",
         "vlucas/valitron": "^1.4",
-
         "phpmailer/phpmailer": "^6.9",
         "mobiledetect/mobiledetectlib": "^4.8",
-
-        "ext-pdo": "*",
-        "ext-json": "*",
-        "ext-gd": "*",
-
         "kreait/firebase-php": "7.*",
         "jimtools/jwt-auth": "^1.0",
-        "bacon/bacon-qr-code": "^3.0"
+        "bacon/bacon-qr-code": "^3.0",
+        "ext-pdo": "*",
+        "ext-json": "*",
+        "ext-gd": "*"
     }
 }
