--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,12 @@
         "kreait/firebase-php": "7.*",
         "jimtools/jwt-auth": "^1.0",
         "bacon/bacon-qr-code": "^3.0",
+        "dompdf/dompdf": "^3.0",
         "ext-pdo": "*",
         "ext-json": "*",
         "ext-gd": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.3"
     }
 }
